--- a/frontend2/src/templates/homepage-live.html
+++ b/frontend2/src/templates/homepage-live.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<div class="globalnotice">
+<div class="globalnotice hidden">
     <div class="globalnotice-inner">
         Notice goes here
     </div>
@@ -42,54 +42,42 @@
                     <li class="navigation-item">
                         <a href="#">
                             <i class="navigation-item-icon far fa-compass"></i>
-                            Entdecken
+                            Aktuell geöffnet
                         </a>
                     </li>
                     <li class="navigation-item">
                         <a href="#">
-                            <i class="navigation-item-icon far fa-calendar"></i>
-                            Events
+                            <i class="navigation-item-icon far fa-shopping-cart"></i>
+                            Onlineshop
                         </a>
                     </li>
                     <li class="navigation-item">
                         <a href="#">
-                            <i class="navigation-item-icon far fa-bars"></i>
-                            Infos
+                            <i class="navigation-item-icon far fa-file"></i>
+                            FAQ
                         </a>
                     </li>
                 </ul>
             </div>
         </div>
     </div>
-    <div class="hero hidden" style="background-image:url('https://abload.de/img/header-mockup74kfa.jpg');">
+    <div class="hero">
         <!-- Move to bottom with .hero-inner--is-bottom !-->
-        <div class="hero-inner hero-inner--is-faded ">
+        <div class="hero-inner">
             <div class="hero-action">
-                <h1>Heidenheim - Die Einkaufsstadt, die alles hat</h1>
+                <h1>Heidenheim ist da für Sie. Und braucht Ihre Unterstützung</h1>
+                <p>
+                    Besuchen Sie Händler, Dienstleister und Gastronomen online, entdecken Sie interessante Shows und bestellen Sie Artikel online bis zur Haustür. Wir sind da für Sie.
+                </p>
                 <form action="/" class="search" method="get">
-                    <input class="search-input" placeholder="Suchen ..." type="text" />
+                    <input class="search-input" placeholder="Suchen..." type="text" />
                     <button class="search-submit" type="submit">
                         <i class="far fa-search"></i>
                     </button>
                 </form>
                 <ul class="hero-menu">
                     <li class="hero-menu-item">
-                        <a href="#">Einkaufen</a>
-                    </li>
-                    <li class="hero-menu-item">
-                        <a href="#">Service</a>
-                    </li>
-                    <li class="hero-menu-item">
-                        <a href="#">Essen</a>
-                    </li>
-                    <li class="hero-menu-item">
-                        <a href="#">Markenfinder</a>
-                    </li>
-                    <li class="hero-menu-item">
-                        <a href="#">Parken</a>
-                    </li>
-                    <li class="hero-menu-item">
-                        <a href="#">Gutscheine</a>
+                        <a href="#">Ich will mitmachen</a>
                     </li>
                 </ul>
             </div>
@@ -98,7 +86,7 @@
             <p>"Skyline Dreams" von <a href="#">Philipp Reiner</a></p>
         </div>
     </div>
-    <div class="livehome">
+    <div class="livehome hidden">
         <div class="container">
             <div class="entryhead">
                 <div class="entryhead-main" style="background-image:url('http://placekitten.com/1200/400')">
@@ -202,9 +190,86 @@
         </div>
     </div>
     <div class="home">
+        <div class="container container--default">
+            <div class="home-title">
+                <h3>Online erleben</h3>
+            </div>
+            <div class="livehome-shows">
+                <div class="entryhead-live-shows">
+                    <div class="entryhead-live-shows-entry">
+                        <div class="entryhead-live-shows-entry-time">
+                            Jetzt
+                        </div>
+                        <div class="entryhead-live-shows-entry-title">
+                            <a href="#linktoentry">
+                                Die neuen Mountainbikes
+                            </a>
+                        </div>
+                        <div class="entryhead-live-shows-entry-owner">
+                            <a href="#">Nubuk Fun & Bike Sports</a>
+                        </div>
+                        <div class="entryhead-live-shows-entry-addcal">
+                            <a href="#">
+                                <i class="far fa-calendar-plus"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="entryhead-live-shows-entry">
+                        <div class="entryhead-live-shows-entry-time">
+                            23.03 - 15:00
+                        </div>
+                        <div class="entryhead-live-shows-entry-title">
+                            Die passende Webcam fürs Home-Office
+                        </div>
+                        <div class="entryhead-live-shows-entry-owner">
+                            <a href="#">Some other store...</a>
+                        </div>
+                        <div class="entryhead-live-shows-entry-addcal">
+                            <a href="#">
+                                <i class="far fa-calendar-plus"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="entryhead-live-shows-entry">
+                        <div class="entryhead-live-shows-entry-time">
+                            23.03 - 15:00
+                        </div>
+                        <div class="entryhead-live-shows-entry-title">
+                            Die neuen Mountainbikes
+                        </div>
+                        <div class="entryhead-live-shows-entry-owner">
+                            <a href="#">Nubuk Fun & Bike Sports</a>
+                        </div>
+                        <div class="entryhead-live-shows-entry-addcal">
+                            <a href="#">
+                                <i class="far fa-calendar-plus"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="entryhead-live-shows-entry">
+                        <div class="entryhead-live-shows-entry-time">
+                            23.03 - 15:00
+                        </div>
+                        <div class="entryhead-live-shows-entry-title">
+                            Die neuen Mountainbikes
+                        </div>
+                        <div class="entryhead-live-shows-entry-owner">
+                            <a href="#">Nubuk Fun & Bike Sports</a>
+                        </div>
+                        <div class="entryhead-live-shows-entry-addcal">
+                            <a href="#">
+                                <i class="far fa-calendar-plus"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="home">
         <div class="container container--default" data-equalizer data-equalize-on="medium">
             <div class="home-title">
-                <h3>Online besuchen & einkaufen <a target="_blank" class="heading-inline" href="https://www.notion.so/conclurer/Ich-will-mitmachen-4868a9245e6945b28582bd7d444c5bfb">Ich will mitmachen!</a></h3>
+                <h3>Bestellen und Besuchen<a target="_blank" class="heading-inline" href="https://www.notion.so/conclurer/Ich-will-mitmachen-4868a9245e6945b28582bd7d444c5bfb">Ich will mitmachen!</a></h3>
             </div>
             <div class="home-tile">
             <div data-equalizer-watch class="entrytile">
@@ -226,132 +291,6 @@
                 </a>
             </div>
         </div>
-            <div class="home-tile">
-                <div data-equalizer-watch class="entrytile">
-                    <a href="#" class="entrytile-image">
-                        <img src="https://www.heidenheimerleben.de/site/assets/files/8794/ausenansicht.500x300.jpg" alt="App Pelzhaus"/>
-                        <span class="entrytile-open">
-                        <i class="far fa-video"></i>
-                        Jetzt live
-                    </span>
-                    </a>
-                    <a href="#" class="entrytile-title">
-                        <h3>App Pelzhaus</h3>
-                    </a>
-                    <span class="entrytile-slug">
-                    Pelz- und Hutmoden
-                </span>
-                    <a href="#" class="entrytile-link">
-                        Artikel bestellen
-                    </a>
-                </div>
-            </div>
-            <div class="home-tile">
-                <div data-equalizer-watch class="entrytile">
-                    <a href="#" class="entrytile-image">
-                        <img src="https://www.heidenheimerleben.de/site/assets/files/8794/ausenansicht.500x300.jpg" alt="App Pelzhaus"/>
-                        <span class="entrytile-open">
-                        <i class="far fa-video"></i>
-                        Jetzt live
-                    </span>
-                    </a>
-                    <a href="#" class="entrytile-title">
-                        <h3>App Pelzhaus</h3>
-                    </a>
-                    <span class="entrytile-slug">
-                    Pelz- und Hutmoden
-                </span>
-                    <a href="#" class="entrytile-link">
-                        Artikel bestellen
-                    </a>
-                </div>
-            </div>
-            <div class="home-tile">
-                <div data-equalizer-watch class="entrytile">
-                    <a href="#" class="entrytile-image">
-                        <img src="https://www.heidenheimerleben.de/site/assets/files/8794/ausenansicht.500x300.jpg" alt="App Pelzhaus"/>
-                        <span class="entrytile-open">
-                        <i class="far fa-video"></i>
-                        Jetzt live
-                    </span>
-                    </a>
-                    <a href="#" class="entrytile-title">
-                        <h3>App Pelzhaus</h3>
-                    </a>
-                    <span class="entrytile-slug">
-                    Pelz- und Hutmoden
-                </span>
-                    <a href="#" class="entrytile-link">
-                        Artikel bestellen
-                    </a>
-                </div>
-            </div>
-            <div class="home-tile">
-                <div data-equalizer-watch class="entrytile">
-                    <a href="#" class="entrytile-image">
-                        <img src="https://www.heidenheimerleben.de/site/assets/files/8794/ausenansicht.500x300.jpg" alt="App Pelzhaus"/>
-                        <span class="entrytile-open">
-                        <i class="far fa-video"></i>
-                        Jetzt live
-                    </span>
-                    </a>
-                    <a href="#" class="entrytile-title">
-                        <h3>App Pelzhaus</h3>
-                    </a>
-                    <span class="entrytile-slug">
-                    Pelz- und Hutmoden
-                </span>
-                    <a href="#" class="entrytile-link">
-                        Artikel bestellen
-                    </a>
-                </div>
-            </div>
-
-        </div>
-        <div class="container hidden container--default" data-equalizer data-equalize-on="medium">
-            <div class="home-title">
-                <h3>Geschichten aus Heidenheim</h3>
-            </div>
-            <div class="home-tile">
-                <div class="articletile1" style="background-image:url('//placekitten.com/500/500');">
-                    <a href="#" class="articletile1-overlay">
-                        <div class="articletile1-inner">
-                            <h3>Artikeltitel</h3>
-                            Soemthing
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="home-more">
-                <a href="#">Alle Artikel lesen</a>
-            </div>
-        </div>
-    </div>
-    <div class="home">
-        <div class="container container--default" data-equalizer data-equalize-on="medium">
-            <div class="home-title">
-                <h3>Online einkaufen</h3>
-            </div>
-            <div class="home-tile">
-                <div data-equalizer-watch class="entrytile">
-                    <a href="#" class="entrytile-image">
-                        <img src="https://www.heidenheimerleben.de/site/assets/files/8794/ausenansicht.500x300.jpg" alt="App Pelzhaus"/>
-                        <span class="entrytile-open">
-                        <i class="far fa-video"></i>
-                        Jetzt live
-                    </span>
-                    </a>
-                    <a href="#" class="entrytile-title">
-                        <h3>App Pelzhaus</h3>
-                    </a>
-                    <span class="entrytile-slug">
-                    Pelz- und Hutmoden
-                </span>
-                    <a href="#" class="entrytile-link">
-                        Artikel bestellen
-                    </a>
-                </div>
-            </div>
             <div class="home-tile">
                 <div data-equalizer-watch class="entrytile">
                     <a href="#" class="entrytile-image">
