--- a/frontend2/src/scss/components/_home.scss
+++ b/frontend2/src/scss/components/_home.scss
@@ -85,6 +85,27 @@
       margin-bottom: 0;
     }
   }
+  &-shows {
+    .entryhead-live-shows {
+      max-height: 100%;
+      &-entry {
+        @include breakpoint(medium) {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+
+          &-owner {
+            flex-grow: 1;
+            text-align: right;
+            padding-right: 25px;
+          }
+          &-time {
+            padding-right: $spacing;
+          }
+        }
+      }
+    }
+  }
 }
 
 
