--- a/frontend2/src/templates/homepage-live.html
+++ b/frontend2/src/templates/homepage-live.html
@@ -194,6 +194,35 @@
             <div class="home-title">
                 <h3>Online erleben</h3>
             </div>
+
+            <div class="livehome-stage">
+                <div class="entryhead">
+                    <div class="entryhead-main">
+                        <iframe
+                                src="https://player.twitch.tv/?channel=nubuk_funandbike&parent=heidenheimerleben.de&muted=true"
+                                frameborder="0"
+                                scrolling="no"
+                                allowfullscreen="true">
+                        </iframe>
+                    </div>
+                    <div class="entryhead-more">
+                        <div class="entryhead-live">
+                            <div class="entryhead-live-meta">
+                                <img alt="Reinhard Mode"
+                                     src="https://www.heidenheimerleben.de/site/assets/files/8864/reinhard_logo_zw_4c_rz_neu.jpg"/>
+                                <h1>Reinhard Mode</h1>
+                                <div class="entryhead-live-actions">
+                                    <a class="button primary" href="#">
+                                        <i class="far fa-phone"></i>
+                                        07321 1234 6789
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div class="livehome-shows">
                 <div class="entryhead-live-shows">
                     <div class="entryhead-live-shows-entry">
