--- a/frontend2/src/scss/components/_home.scss
+++ b/frontend2/src/scss/components/_home.scss
@@ -57,7 +57,7 @@
 .livehome {
   margin-bottom: $spacing;
   padding: $spacing;
-  background-color: $light-gray;
+  //background-color: $light-gray;
   .entryhead-live-shows {
     border-bottom: none !important;
   }
@@ -86,6 +86,9 @@
     }
   }
   &-shows {
+    iframe {
+
+    }
     .entryhead-live-shows {
       max-height: 100%;
       &-entry {
@@ -105,6 +108,12 @@
         }
       }
     }
+  }
+
+  &-stage {
+    @include grid-col(12);
+    position: relative;
+    padding-bottom: $spacing;
   }
 }
 
