Added product entries

--- a/frontend2/src/templates/entry-live.html
+++ b/frontend2/src/templates/entry-live.html
@@ -178,13 +178,102 @@
     </div>
 </div>
 <div class="entry-order">
-    <div class="entry-order-inner container container--default">
+    <div class="entry-order-inner container container--default" data-equalizer data-equalize-on="medium">
         <div class="entry-order-title">
-            <h3>Bestellen</h3>
-            <p>Die folgenden Artikel können Sie bestellen {Freitext aus entry z.b. mit liefertext)</p>
+            <h3>Online bestellen</h3>
+            <p>Und Artikel abholen <!-- Bei Versand!--> oder direkt nach Hause liefern lassen.</p>
         </div>
-        Artikelname / Beschreibung / Preis / In den Warenkorb
-        <br>Bestellen->
+        <!-- Equalizer hier bitte wieder einfügen auf .product!-->
+        <div class="entry-order-item">
+            <div class="product" data-equalizer-watch>
+                <div class="product-image">
+                    <img src="//placekitten.com/150/150" alt="Product-title"/>
+                </div>
+                <div class="product-meta">
+                    <h4>
+                        <a href="#">
+                        Some cool product title goes here or here
+                        </a>
+                    </h4>
+                    <div class="product-price">19,99€</div>
+                    <a href="#">
+                        Mehr Informationen
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="entry-order-item">
+            <div class="product">
+                <div class="product-image">
+                    <img src="//placekitten.com/150/150" alt="Product-title"/>
+                </div>
+                <div class="product-meta">
+                    <h4>
+                        <a href="#">
+                            Some cool product title goes here or here
+                        </a>
+                    </h4>
+                    <div class="product-price">19,99€</div>
+                    <a href="#">
+                        Mehr Informationen
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="entry-order-item">
+            <div class="product">
+                <div class="product-image">
+                    <img src="//placekitten.com/150/150" alt="Product-title"/>
+                </div>
+                <div class="product-meta">
+                    <h4>
+                        <a href="#">
+                            Some cool product title goes here or here
+                        </a>
+                    </h4>
+                    <div class="product-price">19,99€</div>
+                    <a href="#">
+                        Mehr Informationen
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="entry-order-item">
+            <div class="product">
+                <div class="product-image">
+                    <img src="//placekitten.com/150/150" alt="Product-title"/>
+                </div>
+                <div class="product-meta">
+                    <h4>
+                        <a href="#">
+                            Some cool product title goes here or here
+                        </a>
+                    </h4>
+                    <div class="product-price">19,99€</div>
+                    <a href="#">
+                        Mehr Informationen
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="entry-order-item">
+            <div class="product">
+                <div class="product-image">
+                    <img src="//placekitten.com/150/150" alt="Product-title"/>
+                </div>
+                <div class="product-meta">
+                    <h4>
+                        <a href="#">
+                            Some cool product title goes here or here
+                        </a>
+                    </h4>
+                    <div class="product-price">19,99€</div>
+                    <a href="#">
+                        Mehr Informationen
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <div class="entry-basics">
