--- a/frontend2/src/templates/index.html
+++ b/frontend2/src/templates/index.html
@@ -27,9 +27,10 @@
     <a href="experience.html" class="button">Experience</a>
     <a href="experience-alternativ.html" class="button">Experience mit Plakat</a>
     <a href="articles.html" class="button">Articles</a>
-    <h2>Live-Changes</h2>
+    <h2>Corona-Update Views</h2>
     <a href="entry-live.html" class="button">Entry Live</a>
     <a href="homepage-live.html" class="button">Homepage Live</a>
+    <a href="basic-product.html" class="button">Product Detail</a>
 </div>
 </body>
 </html>
