--- a/frontend2/src/scss/components/_entry-order.scss
+++ b/frontend2/src/scss/components/_entry-order.scss
@@ -9,4 +9,18 @@
   &-title {
     @include grid-col(12);
   }
+
+  &-item {
+   @include grid-col(12);
+    padding-bottom: $spacing*2;
+    @include breakpoint(medium) {
+      @include grid-col(6);
+    }
+    @include breakpoint(large) {
+      @include grid-col(4);
+    }
+    &:last-child:not(:first-child) {
+      float: left; //Stupid Foundation
+    }
+  }
 }
