--- a/frontend2/src/scss/main.scss
+++ b/frontend2/src/scss/main.scss
@@ -71,3 +71,4 @@
 @import 'components/experience';
 @import 'components/articles';
 @import 'components/entry-order';
+@import 'components/product';
