--- a/frontend2/src/templates/index.html
+++ b/frontend2/src/templates/index.html
@@ -31,6 +31,7 @@
     <a href="entry-live.html" class="button">Entry Live</a>
     <a href="homepage-live.html" class="button">Homepage Live</a>
     <a href="basic-product.html" class="button">Product Detail</a>
+    <a href="basic-order.html" class="button">Order-Form</a>
 </div>
 </body>
 </html>
