--- a/frontend-regiochat/src/scss/main.scss
+++ b/frontend-regiochat/src/scss/main.scss
@@ -50,4 +50,9 @@
 @import 'base/overwrites';
 
 @import 'components/layout';
+@import 'components/header';
+@import 'components/title';
+@import 'components/poster';
+@import 'components/actions';
+@import 'components/stream';
 
