--- a/frontend-regiochat/src/templates/room-guest.html
+++ b/frontend-regiochat/src/templates/room-guest.html
@@ -4,23 +4,37 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HDH Erleben</title>
+    <title>RegioUI</title>
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Inter:400,700|Vollkorn:600&display=swap" rel="stylesheet">
 
 </head>
-<body style="margin:50px;">
-
-<div class="container">
-    <h1>Basis</h1>
-    <a href="basic.html" class="button">Basis</a>
-
-    <h2>Templates </h2>
-    <a href="entry.html" class="button">Entry</a>
-    <a href="enter-room.html" class="button">Enter Room</a>
-    <a href="enter-room-host.html" class="button">Enter Room as Host</a>
-    <a href="room-guest.html" class="button">Room (Guest)</a>
-
+<body class="dark">
+<div class="head head--dark">
+    <div class="container">
+        <div class="header">
+            <div class="header-action">
+                <a href="#">
+                    <i class="far fa-arrow-left"></i>
+                    Verlassen
+                </a>
+            </div>
+        </div>
+        <div class="title">
+            <h1>Room Name</h1>
+        </div>
+        <div class="stream stream--guest">
+            <div class="stream-view stream-view--host">
+                Video goes here
+            </div>
+            <div class="stream-view stream-view--guest">
+                guest goes here
+            </div>
+        </div>
+        <div class="controls">
+            Floating controls here
+        </div>
+    </div>
 </div>
 
 <script
