--- a/frontend-regiochat/src/scss/base/_overwrites.scss
+++ b/frontend-regiochat/src/scss/base/_overwrites.scss
@@ -15,7 +15,7 @@
   text-decoration: none;
 }
 .button svg {
-  margin-right: $spacing*2;
+  margin-right: $spacing;
 }
 .button.secondary {
   color: $accent-color;
