--- a/frontend-regiochat/src/scss/main.scss
+++ b/frontend-regiochat/src/scss/main.scss
@@ -54,5 +54,15 @@
 @import 'components/title';
 @import 'components/poster';
 @import 'components/actions';
-@import 'components/stream';
+@import 'components/videoroom';
+@import 'components/page';
+@import 'components/faq';
+@import 'components/search';
+@import 'components/footer';
+@import 'components/entrylist';
+@import 'components/controls';
+@import 'components/panel';
+@import 'components/entry';
+@import 'components/item';
+@import 'components/checkout';
 
