--- a/frontend-regiochat/src/templates/entry.html
+++ b/frontend-regiochat/src/templates/entry.html
@@ -22,7 +22,6 @@
         </div>
         <div class="title">
             <h1>Room Name</h1>
-            <p>Some optional text goes here</p>
         </div>
         <div class="poster">
             <div class="poster-live hidden">
@@ -38,13 +37,104 @@
                 Online besuchen
             </a>
             <a href="#" class="button full reduced">
+                <i class="far fa-envelope"></i>
+                Nachricht senden
+            </a>
+            <a href="#" class="button full reduced">
                 <i class="far fa-phone"></i>
                 Anrufen
             </a>
         </div>
     </div>
 </div>
+<div class="entry">
+    <div class="entry-showroom">
+        <div class="container">
+            <div class="entry-showroom-item">
+                <a href="#" class="itempreview" style="background-image:url('//placekitten.com/225/400')">
+                    <div class="itempreview-inner">
+                        <div class="itempreview-title">
+                            <h3>Title of this product</h3>
+                            <small>9,99€</small>
+                        </div>
+                        <div class="itempreview-action">
+                            <span class="button reduced">Ansehen</span>
+                        </div>
+                    </div>
 
+                </a>
+            </div>
+            <div class="entry-showroom-item">
+                <a href="#" class="itempreview" style="background-image:url('//placekitten.com/225/400')">
+                    <div class="itempreview-inner">
+                        <div class="itempreview-title">
+                            <h3>Title of this product</h3>
+                            <small>9,99€</small>
+                        </div>
+                        <div class="itempreview-action">
+                            <span class="button reduced">Ansehen</span>
+                        </div>
+                    </div>
+
+                </a>
+            </div>
+            <div class="entry-showroom-item">
+                <a href="#" class="itempreview" style="background-image:url('//placekitten.com/225/400')">
+                    <div class="itempreview-inner">
+                        <div class="itempreview-title">
+                            <h3>Title of this product</h3>
+                            <small>9,99€</small>
+                        </div>
+                        <div class="itempreview-action">
+                            <span class="button reduced">Ansehen</span>
+                        </div>
+                    </div>
+
+                </a>
+            </div>
+            <div class="entry-showroom-item">
+                <a href="#" class="itempreview" style="background-image:url('//placekitten.com/225/400')">
+                    <div class="itempreview-inner">
+                        <div class="itempreview-title">
+                            <h3>Title of this product</h3>
+                            <small>9,99€</small>
+                        </div>
+                        <div class="itempreview-action">
+                            <span class="button reduced">Ansehen</span>
+                        </div>
+                    </div>
+
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="entry-content">
+            content hier
+
+            <p>
+            <a href="#" target="_blank" class="button">
+                <i class="far fa-external-link"></i>
+                Zur Webseite
+            </a>
+            </p>
+            <div class="hidden faq">
+                <div class="faq-item">
+                    <h3>Was kostet RegioConcept?</h3>
+                    <p>Regio-Concept ist aktuell kostenlos. Wir überegen uns nach der Corona-Krise ein Geschäftsmodell. Wir werden aber vorab euch entsprechend informieren.</p>
+                </div>
+                <div class="faq-item">
+                    <h3>Was kostet RegioConcept?</h3>
+                    <p>Regio-Concept ist aktuell kostenlos. Wir überegen uns nach der Corona-Krise ein Geschäftsmodell. Wir werden aber vorab euch entsprechend informieren.</p>
+                </div>
+            </div>
+        </div>
+        <div class="entry-side">
+            <h3>Öffnungszeiten</h3>
+        </div>
+
+    </div>
+</div>
 <script
         crossorigin="anonymous"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
