--- a/frontend-regiochat/src/templates/index.html
+++ b/frontend-regiochat/src/templates/index.html
@@ -20,6 +20,7 @@
     <a href="enter-room.html" class="button">Enter Room</a>
     <a href="enter-room-host.html" class="button">Enter Room as Host</a>
     <a href="room-guest.html" class="button">Room (Guest)</a>
+    <a href="home.html" class="button">Home</a>
 
 </div>
 
