--- a/frontend-regiochat/src/scss/_settings.scss
+++ b/frontend-regiochat/src/scss/_settings.scss
@@ -99,6 +99,8 @@ $print-transparent-backgrounds: true;
 
 $breakpoints: (
         small: 0,
+        compact: 413px,
+        growing: 600px,
         medium: 768px,
         large: 1024px,
         xlarge: 1200px,
@@ -129,7 +131,7 @@ $header-styles: (
         small: (
                 'h1': ('font-size': 25),
                 'h2': ('font-size': 24),
-                'h3': ('font-size': 17),
+                'h3': ('font-size': 19),
                 'h4': ('font-size': 17),
                 'h5': ('font-size': 17),
                 'h6': ('font-size': 17),
@@ -345,7 +347,7 @@ $fieldset-border: 1px solid $medium-gray;
 $fieldset-padding: rem-calc(17);
 $fieldset-margin: rem-calc(15 0);
 $legend-padding: rem-calc(0 3);
-$form-spacing: rem-calc(20);
+$form-spacing: rem-calc(24);
 $helptext-color: $black;
 $helptext-font-size: rem-calc(17);
 $helptext-font-style: italic;
@@ -364,17 +366,17 @@ $input-color: $black;
 $input-placeholder-color: $dark-gray;
 $input-font-family: inherit;
 $input-font-size: rem-calc(17);
-$input-background: $light-gray;
+$input-background: $white;
 $input-background-focus: $white;
 $input-background-disabled: $light-gray;
-$input-border: 1px solid $medium-gray;
-$input-border-focus: 1px solid $black;
+$input-border: none;
+$input-border-focus: 2px solid $warning-color;
 $input-shadow: none;
 $input-shadow-focus:none;
 $input-cursor-disabled: default;
 $input-transition: all .2s ease-in;
 $input-number-spinners: false;
-$input-radius: 0;
+$input-radius: $global-radius;
 
 // 20. Label
 // ---------
